src/objects/BT_CO_ASIAONE_BulkIdCreation__c.object
<CustomObject>
    <description>place holder for bulk asia one id creation.</description>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Answer__c</fullName>
        <label>Secret_Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Question__c</fullName>
        <label>Secret_Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID_LDAP_ID__c</fullName>
        <label>User_ID_LDAP_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creationStatus__c</fullName>
        <label>creationStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>subscription__c</fullName>
        <label>subscription</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ASIAONE_BulkIdCreation</label>
    <nameField>
        <label>BT_CO_ASIAONE_BulkIdCreation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ASIAONE_BulkIdCreation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>